2005-10-07  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/modems.conf: added modems group for Sony Ericsson T63x, 
     found at Heny Junior's blog describing the use on a MacOS X system. 
     [URL: http://henryjunior.com/blog/?p=12] 
     
2005-10-06  Stipe Tolj  <stolj@wapme-group.de>
   * gwlib/octstr.c: fixed a critical bug in octstr_split() where we would loop 
     infinetly inside the while clause cuasing octstr_search() to allocate 
     memory. If a needle has len 0, then we obviously have an exit condition 
     for the loop.
  
2005-10-05  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wap_push_ppg.c: possibly fixing bug #144, initializing Octstr vars
     that are destroyed afterwards in case of a failed URL compare, waiting on 
     Jonathan for feedback.
   
2005-10-05  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wml_compiler.c: fixing bug #255 where we pass a NULL result from 
     xmlDocGetRootElement() within parse_document() to the next functions and 
     hence causing an segfault. Thanks a lot to Mindaugas Riauba <mind@bi.lt>
     for the bug report and the fix suggestion.
     [Msg-Id: <01ad01c5c807$8bca3ba0$f20214ac@bite.lt>]

2005-10-04  Stipe Tolj  <stolj@wapme-group.de>
   * doc/examples/modems.conf: commenting 'no-smsc' value for Falcom GSM modems,
     this breaks the PDU string acceptance as far as we tested. Should be 'false'
     for the Falcom modem type.

2005-09-27  Stipe Tolj  <stolj@wapme-group.de>
   * gwlib/dlrpool_sqlite3.c, gwlib/dbpool.[ch]: added SQLite3 support for database 
     pool constructs. This can be used to implement a DLR storage type for SQLite3.
   * gw-config.h.in, configure[.in]: added SQLite3 support, this is only the 
     configuration part, yet no DLR storage implemenation for this.

2005-09-27  Stipe Tolj  <stolj@wapme-group.de>
   * gw/dlr_pgsql.c: fixed a typo from previous commit on this that broke 
     compilation. No logic change.
      
2005-09-27  Alexander Malysh <amalysh at kannel.org>